# Saintcon2024

./: README.md
Firmware/: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Firmware/components/accel/: CMakeLists.txt  accel.c  mc3419.c  mc3419.h
Firmware/components/api/: CMakeLists.txt  api.cpp  api_client.cpp  api_client.h  types.cpp
Firmware/components/badge/: CMakeLists.txt  badge.c  config.c  config.h  ir.c  ir.h  migrate.c  migrate.h  ota.c  ota.h  towers.c  towers.h  version.c
Firmware/components/battery/: CMakeLists.txt  battery.c
Firmware/components/charger/: CMakeLists.txt  Kconfig  charger.c
Firmware/components/display/: CMakeLists.txt  Kconfig  config.h  display.c  touch.c  touch.h
Firmware/components/i2c_manager/: CMakeLists.txt  Kconfig  i2c_manager.c
Firmware/components/ir_comm/: CMakeLists.txt  Kconfig  ir_comm.c  ir_nec_encoder.c  ir_nec_encoder.h
Firmware/components/load_switch/: CMakeLists.txt  Kconfig  (+1 more)
Firmware/components/ui/: CMakeLists.txt  components.c  components.h  content.c  content.h  loadanim.c  loadanim.h  onboarding.c  onboarding.h  statusbar.c  statusbar.h  theme.c  theme.h  ui.c  ui_events.c  ui_events.h
Firmware/components/ui/components/: attack.c  attack.h  modal.c  modal.h
Firmware/components/ui/fonts/: bm_mini_16.c  bm_mini_8.c  clarity_14.c  clarity_16.c  clarity_18.c  clarity_20.c  clarity_22.c  clarity_24.c  cyberphont3b_10.c  cyberphont3b_12.c  cyberphont3b_14.c  cyberphont3b_16.c  fa_sharp_icons_16.c
Firmware/components/ui/images/: SAINTCON_Logo.c  bad_klippy.c  klippy_net_logo.c  left_bump.c  left_hand.c  overview_map.c  resistance_logo.c  right_bump.c  right_hand.c  sc24_logo.c  sc24_logo_300.c  theme_screens.c  tower.c
Firmware/components/ui/include/: ui.h
Firmware/components/ui/pages/: home.c  home.h  levelup.c  levelup.h  map.c  map.h  secret.c  secret.h  settings.c  settings.h  shop.c  shop.h  stats.c  stats.h  tower_battle.c  tower_battle.h
Firmware/components/ui/screens/: hwtest.c  hwtest.h  main.c  main.h  splash.c  splash.h  update.c  update.h
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
Hardware/MinibadgeHolder8/: SaintconMinibadgeHolder8-2024-BOM.xlsx
Hardware/Saintcon2024MainBoard/: Saintcon2024-BOM.xlsx
Klip-ons/KiCad Libraries/: Saintcon2024Klip-ons.kicad_sym
Klip-ons/Saintcon2024MinibadgeKlip-onExample/: Saintcon2024MinibadgeKlip-onExample.kicad_pcb  Saintcon2024MinibadgeKlip-onExample.kicad_prl  Saintcon2024MinibadgeKlip-onExample.kicad_pro  Saintcon2024MinibadgeKlip-onExample.kicad_sch
(+38 files in other folders)
